# ShellyExporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: build.yml
src/: main.rs
